WIP - Criação de testes para VideoService, criação de ControllerService e criação de alguns casos de testes para as funcionalidades;

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon ./api/index.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --coverage"
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --coverage",
+    "test:video:service": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=api/test/services/videoService.test.js"
   },
   "keywords": [],
   "author": "",
